--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@ body {
   background: #f7f2f0;
 }
 .landing a {
-  color: #f95959;
+  color: #e7b3b3;
   font-family: monospace;
   font-weight: 900;
   text-align: center;
@@ -22,7 +22,7 @@ body {
 h1 {
   text-transform: uppercase;
   letter-spacing: 10px;
-  color: #f95959;
+  color: #e7b3b3;
   margin: 0 auto;
 }
 
