--- a/styles/style.css
+++ b/styles/style.css
@@ -72,14 +72,12 @@ h1 {
   margin-bottom: 200px;
 }
 
-.footer {
-  margin: 100px;
-}
 .foot {
   background-color: var(--highlight-color);
   padding: 10px;
   margin: 0;
   margin-right: -100;
+  margin-top: 200px;
 }
 
 .erc-ink,
