--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,22 @@ h1 {
   margin-bottom: 200px;
 }
 
+.inTouch,
+.inTouch a {
+  font-family: var(--primary-font-family);
+  letter-spacing: 2px;
+  text-align: center;
+  font-style: italic;
+  color: var(--highlight-color);
+  text-decoration: none;
+  opacity: 80%;
+  text-transform: uppercase;
+}
+
+.inTouch a:hover {
+  opacity: 20%;
+}
+
 .foot {
   background-color: var(--highlight-color);
   padding: 10px;
