--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ body {
 }
 .landing {
   text-align: center;
-  margin-bottom: 100px;
+  margin-top: 100px;
 }
 .landing a {
   color: var(--secondary-color);
