--- a/styles/style.css
+++ b/styles/style.css
@@ -195,6 +195,8 @@ h3 {
   h1 {
     margin-top: 20px;
     margin-bottom: 10px;
+    font-size: 24px;
+    margin-left: 10px;
   }
   .menu {
     display: none;
