--- a/styles/style.css
+++ b/styles/style.css
@@ -150,7 +150,7 @@ a {
   text-align: center;
 }
 .fa-angle-up {
-  color: var(--highlight-color);
+  color: var(--secondary-color);
   font-size: 20px;
 }
 
