made notation on style.css better

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+/* all pages */
+
 :root {
   --primary-font-family: "Gill sans";
   --secondary-font-family: "PT Mono", monospace;
@@ -11,6 +13,9 @@ body {
   border: 6px solid var(--highlight-color);
   color: var(--secondary-color);
 }
+
+/* entrance page - index.html */
+
 .opening {
   height: 100vh;
   background: var(--primary-color);
@@ -18,7 +23,26 @@ body {
   color: var(--secondary-color);
 }
 
-/* header test */
+.landing {
+  text-align: center;
+}
+.landing a {
+  color: var(--secondary-color);
+  cursor: crosshair;
+  font-family: monospace;
+  font-size: 200px;
+  font-weight: 900;
+  text-align: center;
+  text-decoration: none;
+}
+.landing:hover {
+  cursor: grabbing;
+  text-shadow: -10px 10px 0px var(--highlight-color);
+  transition: all 200ms ease-in-out;
+}
+
+/* mobile menu - all pages */
+
 .menuBody label,
 li {
   font-family: var(--secondary-font-family);
@@ -63,25 +87,7 @@ li:hover {
   overflow: hidden;
 }
 
-/* end of */
-
-.landing {
-  text-align: center;
-}
-.landing a {
-  color: var(--secondary-color);
-  cursor: crosshair;
-  font-family: monospace;
-  font-size: 200px;
-  font-weight: 900;
-  text-align: center;
-  text-decoration: none;
-}
-.landing:hover {
-  cursor: grabbing;
-  text-shadow: -10px 10px 0px var(--highlight-color);
-  transition: all 200ms ease-in-out;
-}
+/* menu - all pages */
 
 ul {
   font-family: var(--secondary-font-family);
@@ -109,6 +115,8 @@ li {
   opacity: 20%;
 }
 
+/* main gallery section - all pages */
+
 .title {
   text-align: center;
   padding: 0px 10px;
@@ -134,24 +142,6 @@ a {
   margin-bottom: 200px;
 }
 
-.inTouch,
-.info,
-.inTouch a {
-  font-family: var(--primary-font-family);
-  font-size: 13px;
-  letter-spacing: 2px;
-  text-align: center;
-  font-style: italic;
-  color: var(--secondary-color);
-  text-decoration: none;
-  opacity: 80%;
-  text-transform: uppercase;
-}
-
-.inTouch a:hover {
-  opacity: 20%;
-}
-
 .goUp {
   text-align: center;
 }
@@ -160,12 +150,23 @@ a {
   font-size: 20px;
 }
 
+/* footer - all pages */
+
 .foot {
   background-color: var(--highlight-color);
   padding: 10px;
   margin: 0;
   margin-right: -100;
   margin-top: 200px;
+}
+
+h3 {
+  font-family: var(--primary-font-family);
+  font-size: 15px;
+  font-style: italic;
+  letter-spacing: 2px;
+  line-height: 20px;
+  text-align: center;
 }
 
 .erc-ink,
@@ -187,13 +188,24 @@ a {
   float: right;
 }
 
-h3 {
+/* home page only - email me */
+
+.inTouch,
+.info,
+.inTouch a {
   font-family: var(--primary-font-family);
-  font-size: 15px;
-  font-style: italic;
+  font-size: 13px;
   letter-spacing: 2px;
-  line-height: 20px;
   text-align: center;
+  font-style: italic;
+  color: var(--secondary-color);
+  text-decoration: none;
+  opacity: 80%;
+  text-transform: uppercase;
+}
+
+.inTouch a:hover {
+  opacity: 20%;
 }
 
 @media (max-width: 900px) {
