--- a/styles/style.css
+++ b/styles/style.css
@@ -17,28 +17,26 @@ body {
 /* entrance page - index.html */
 
 .opening {
-  height: 100vh;
-  background: var(--primary-color);
-  border: 6px solid var(--highlight-color);
-  color: var(--secondary-color);
+  background: #f6f5ef;
+  color: #434141;
+  font-family: "Andale Mono";
+  font-size: 30px;
+  margin-top: 300px;
+  text-align: center;
+  text-transform: uppercase;
+  border: none;
 }
 
-.landing {
-  text-align: center;
+p {
+  display: inline;
 }
-.landing a {
-  color: var(--secondary-color);
-  cursor: crosshair;
-  font-family: monospace;
-  font-size: 200px;
-  font-weight: 900;
-  text-align: center;
-  text-decoration: none;
+.demo {
+  margin: 650px 0px;
+  font-size: 20px;
 }
-.landing:hover {
-  cursor: grabbing;
-  text-shadow: -10px 10px 0px var(--highlight-color);
-  transition: all 200ms ease-in-out;
+
+.note {
+  font-size: 13px;
 }
 
 /* mobile menu - all pages */
@@ -226,6 +224,19 @@ h3 {
   }
   .menu {
     display: none;
+  }
+
+  .opening {
+    margin: 300px 100px;
+    font-size: 23px;
+  }
+  .demo {
+    margin: 350px 0px;
+    font-size: 13px;
+  }
+
+  .note {
+    font-size: 7px;
   }
 }
 
