--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,10 @@ body {
 }
 
 /* entrance page - index.html */
+@font-face {
+  font-family: myFirstFont;
+  src: url(AndaleMono.ttf);
+}
 
 .opening {
   background: #f6f5ef;
